samples/_failures_safe/1761139590_14d17c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b10e9790.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_b10e9790.c:165:37: error: missing terminating " character
  165 |         case TOKEN_OPERATOR: printf("
      |                                     ^
./samples/SAFE/__tmp_b10e9790.c:165:9: error: expected expression at end of input
  165 |         case TOKEN_OPERATOR: printf("
      |         ^~~~
./samples/SAFE/__tmp_b10e9790.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b10e9790.c:165:9: error: expected declaration or statement at end of input
